--- a/arch/arm/configs/d1lu-perf_defconfig
+++ b/arch/arm/configs/d1lu-perf_defconfig
@@ -1205,7 +1205,8 @@ CONFIG_REGMAP_SPI=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
 # CONFIG_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
