--- a/arch/arm/configs/d1lv_defconfig
+++ b/arch/arm/configs/d1lv_defconfig
@@ -299,6 +299,8 @@ CONFIG_CFG80211=m
 CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_ANDROID_VIBRATOR=y
